# gb-emu

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  NOTES.md  README.md  run.sh  vcpkg.json
include/: Bus.hpp  CPU.hpp  CPU_Types.hpp  Cartridge.hpp  Common.hpp  FlagsRegister.hpp  GameBoy.hpp  IO.hpp  InstructionNames.hpp  PPU.hpp  PlatformSDL.hpp  RegisterPair.hpp  Types.hpp  bit.hpp
src/: Bus.cpp  CMakeLists.txt  CPU.cpp  CPU_Dispatching.cpp  CPU_InstructionDispatching.cpp  CPU_Instructions.cpp  Cartridge.cpp  GameBoy.cpp  PlatformSDL.cpp  main.cpp
tests/: CMakeLists.txt  cpu-instrs-tests.cpp
